Enhancements to order of container startup - try fixes for aeron